<resources>
    <string name="app_name">Expenses Manager</string>
    <string name="welcome">Welcome Back,\n Please Wait...</string>
    <string name="register_error">Error with Email or Password</string>
    <string name="logged_out">Logged Out.</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_item">Add Item</string>
    <string name="title">Title</string>
    <string name="place">Place</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="pic_saved">Picture Saved.</string>
    <string name="fill_title">Must Fill The Title</string>
    <string name="fill_price">Must Fill The Price</string>
    <string name="no_place">No Place Inserted</string>
    <string name="no_category">No Category Inserted</string>
    <string name="no_desc">No Description Inserted</string>
    <string name="select_month">Select Month:</string>
    <string name="select_category">Select Category:</string>
    <string name="select_price">Enter Price:</string>
    <string name="no_items">No Items To Show.</string>
</resources>
